# QPThesis

./: CMakeLists.txt  POCollocationSolver.cpp  POCollocationSolver.h  PeriodicOrbit.cpp  PeriodicOrbit.h  QPCollocationSolver.cpp  QPCollocationSolver.h  Solver3BP.cpp  Solver3BP.h  Torus.cpp  Torus.h  graphs.py  interp.cpp  interp.h  main.cpp  tools.cpp  tools3bp.cpp  tools3bp.h
